Added Routing in app module, added navigation between routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
-<app-login></app-login>
-<!-- <app-register></app-register> -->
-<!-- <app-add-course></app-add-course> -->
+<router-outlet></router-outlet>
+<app-footer></app-footer>
