--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-  <mat-card-title>Login</mat-card-title>
+  <mat-card-title>Register</mat-card-title>
   <form>
-    <div class="loginInfo">
+    <div class="registerInfo">
       <mat-form-field appearance="fill">
         <mat-label>Enter your email</mat-label>
         <input matInput required>
@@ -14,10 +14,17 @@
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
       </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your password again</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" required>
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
     <div class="button">
-      <button mat-raised-button color="primary" type="submit">Login</button>
+      <button mat-raised-button color="primary" type="submit">Register</button>
     </div>
-    <a href="">Don't have an account?</a>
+    <a href="/login">Already have an account?</a>
   </form>
 </mat-card>
