--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,15 +2,15 @@
   <mat-toolbar-row>
     <span>Course Tracker</span>
     <span class="spacer"></span>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
+    <button mat-icon-button *ngIf="hasRoute('/') || hasRoute('/add-course')" [matMenuTriggerFor]="menu">
       <mat-icon>menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item routerLink="/">
         <mat-icon>school</mat-icon>
         <span>Course Work</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item routerLink="/add-course">
         <mat-icon>add</mat-icon>
         <span>Add Courses</span>
       </button>
