--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-  <mat-card-title>Register</mat-card-title>
+  <mat-card-title>Login</mat-card-title>
   <form>
-    <div class="registerInfo">
+    <div class="loginInfo">
       <mat-form-field appearance="fill">
         <mat-label>Enter your email</mat-label>
         <input matInput required>
@@ -14,17 +14,10 @@
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
       </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your password again</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'" required>
-        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
     </div>
     <div class="button">
-      <button mat-raised-button color="primary" type="submit">Register</button>
+      <button mat-raised-button color="primary" type="submit">Login</button>
     </div>
-    <a href="">Already have an account?</a>
+    <a href="/register">Don't have an account?</a>
   </form>
 </mat-card>
