Added material to add-course and tracker

--- a/src/app/components/add-course/add-course.component.html
+++ b/src/app/components/add-course/add-course.component.html
@@ -1,1 +1,20 @@
-<p>add-course works!</p>
+<form>
+  <div class="courseInfo">
+    <mat-form-field appearance="fill">
+      <mat-label>Enter Course Name</mat-label>
+      <input matInput required>
+      <mat-error></mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter Course Professor</mat-label>
+      <input matInput required>
+      <mat-error></mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter Professor Email</mat-label>
+      <input matInput>
+      <mat-error></mat-error>
+    </mat-form-field>
+    <app-button></app-button>
+  </div>
+</form>
