--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,7 @@
 <mat-card>
-  <mat-card-title>Login</mat-card-title>
+  <mat-card-title>
+     <h2>Login</h2>
+  </mat-card-title>
   <form>
     <div class="loginInfo">
       <mat-form-field appearance="fill">
