--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,7 @@
 <mat-card>
-  <mat-card-title>Register</mat-card-title>
+  <mat-card-title>
+    <h2>Register</h2>
+ </mat-card-title>
   <form>
     <div class="registerInfo">
       <mat-form-field appearance="fill">
