Added form submission functionality for adding courses

--- a/src/app/components/add-course/add-course.component.html
+++ b/src/app/components/add-course/add-course.component.html
@@ -2,7 +2,7 @@
   <div class="courseInfo">
     <mat-form-field appearance="fill">
       <mat-label>Enter Course Name</mat-label>
-      <input matInput type="text" name="coursName" ngModel required #courseName="ngModel">
+      <input matInput type="text" name="courseName" ngModel required #courseName="ngModel">
       <mat-error></mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
