Issue #7 - Started working on dialog form for addign items

--- a/src/app/components/courseTracker/tracker-tabs/tracker-tabs.component.html
+++ b/src/app/components/courseTracker/tracker-tabs/tracker-tabs.component.html
@@ -4,3 +4,4 @@
     <app-tracker-table></app-tracker-table>
   </mat-tab>
 </mat-tab-group>
+<app-add-work-button (click)="onAddItem()"></app-add-work-button>
