Issue #8 - Added table to tabs with dummy data

--- a/src/app/components/courseTracker/tracker-tabs/tracker-tabs.component.html
+++ b/src/app/components/courseTracker/tracker-tabs/tracker-tabs.component.html
@@ -4,4 +4,8 @@
     <app-tracker-table></app-tracker-table>
   </mat-tab>
 </mat-tab-group>
-<app-add-work-button (click)="onAddItem()"></app-add-work-button>
+<div class="buttons">
+  <app-add-work-button *ngIf="courses.length >= 1" (click)="onAddItem()"></app-add-work-button>
+  <app-delete-work-button></app-delete-work-button>
+</div>
+
