--- a/src/app/components/courseAdding/courses/courses.component.html
+++ b/src/app/components/courseAdding/courses/courses.component.html
@@ -27,20 +27,22 @@
         <mat-error></mat-error>
       </mat-form-field>
     </div>
-    <div class="buttons">
-      <button mat-raised-button (click)="updateCourse()" *ngIf="hide === true">
-        <mat-icon color="primary">check</mat-icon>
-      </button>
-      <button mat-raised-button (click)="editCourse()" *ngIf="hide === false">
-        <mat-icon color="primary">edit</mat-icon>
-      </button>
-      <button mat-raised-button (click)="deleteCourse()" *ngIf="hide === false">
-        <mat-icon color="warn">delete</mat-icon>
-      </button>
-      <button mat-raised-button (click)="undoEdit()" *ngIf="hide === true">
-        <mat-icon color="primary">undo</mat-icon>
-      </button>
-    </div>
+    <mat-action-row>
+      <div class="buttons">
+        <button mat-raised-button (click)="updateCourse()" *ngIf="hide === true">
+          <mat-icon color="primary">check</mat-icon>
+        </button>
+        <button mat-raised-button (click)="editCourse()" *ngIf="hide === false">
+          <mat-icon color="primary">edit</mat-icon>
+        </button>
+        <button mat-raised-button (click)="deleteCourse()" *ngIf="hide === false">
+          <mat-icon color="warn">delete</mat-icon>
+        </button>
+        <button mat-raised-button (click)="undoEdit()" *ngIf="hide === true">
+          <mat-icon color="primary">undo</mat-icon>
+        </button>
+      </div>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
 <h1 *ngIf="courses.length <= 0">No Courses Added Yet!</h1>
