--- a/src/app/components/courseTracker/dialog-form/dialog-form.component.html
+++ b/src/app/components/courseTracker/dialog-form/dialog-form.component.html
@@ -13,12 +13,14 @@
         <mat-option name="test" value="test">Test</mat-option>
       </mat-select>
     </mat-form-field>
-  <!-- <mat-form-field appearance="fill">
-    <mat-label>Due Date</mat-label>
-    <input matInput [matDatepicker]="dp3" disabled>
-    <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
-    <mat-datepicker #dp3 disabled="false"></mat-datepicker>
-  </mat-form-field> -->
+    <p>
+      <mat-form-field appearance="fill">
+        <mat-label>Due Date</mat-label>
+        <input matInput [matDatepicker]="dp3" disabled>
+        <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
+        <mat-datepicker #dp3 disabled="false"></mat-datepicker>
+      </mat-form-field>
+    </p>
   <mat-form-field appearance="fill">
     <mat-label>Time</mat-label>
     <input matInput type="time" name="time" min="0:00" max="23:59">
