--- a/src/app/components/courseTracker/dialog-form/dialog-form.component.html
+++ b/src/app/components/courseTracker/dialog-form/dialog-form.component.html
@@ -2,12 +2,18 @@
 <div mat-dialog-content>
 <form class="course-work">
   <mat-form-field appearance="fill">
+    <mat-label>Select Course</mat-label>
+    <mat-select required>
+      <mat-option *ngFor="let course of courses" name="course" value="{{course.courseName}}">{{course.courseName}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
     <mat-label>Name</mat-label>
-    <input matInput type="text" name="name">
+    <input matInput type="text" name="name" required>
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Select</mat-label>
-      <mat-select>
+      <mat-select required>
         <mat-option name="assignment" value="assignment">Assignment</mat-option>
         <mat-option name="quiz" value="1uiz">Quiz</mat-option>
         <mat-option name="test" value="test">Test</mat-option>
@@ -23,7 +29,7 @@
     </p>
   <mat-form-field appearance="fill">
     <mat-label>Time</mat-label>
-    <input matInput type="time" name="time" min="0:00" max="23:59">
+    <input matInput type="time" name="time" min="0:00" max="23:59" required>
   </mat-form-field>
   <button mat-raised-button color="primary" type="submit">Submit</button>
 </form>
