--- a/src/app/components/courseAdding/add-course/add-course.component.html
+++ b/src/app/components/courseAdding/add-course/add-course.component.html
@@ -2,17 +2,17 @@
   <div class="courseInfo">
     <mat-form-field appearance="fill">
       <mat-label>Enter Course Name</mat-label>
-      <input matInput type="text" name="courseName" ngModel required #courseName="ngModel">
+      <input matInput type="text" name="courseName" [ngModel]="course?.courseName" required #courseName="ngModel">
       <mat-error></mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Enter Course Professor</mat-label>
-      <input matInput type="text" name="profName" ngModel required #profName="ngModel">
+      <input matInput type="text" name="profName" [ngModel]="course?.profName" required #profName="ngModel">
       <mat-error></mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Enter Professor Email</mat-label>
-      <input matInput type="text" name="profEmail" ngModel #profEmail="ngModel">
+      <input matInput type="text" name="profEmail" [ngModel]="course?.profEmail" #profEmail="ngModel">
       <mat-error></mat-error>
     </mat-form-field>
     <app-button></app-button>
