--- a/src/app/components/courseTracker/tracker-tabs/tracker-tabs.component.html
+++ b/src/app/components/courseTracker/tracker-tabs/tracker-tabs.component.html
@@ -1,5 +1,5 @@
 <app-no-courses *ngIf="courses.length <= 0"></app-no-courses>
-<mat-tab-group>
+<mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)">
   <mat-tab *ngFor="let course of courses" label="{{course.courseName}}">
     <app-tracker-table></app-tracker-table>
   </mat-tab>
