Removed tracker tabs, will add course column to table

--- a/src/app/components/courseTracker/tracker/tracker.component.html
+++ b/src/app/components/courseTracker/tracker/tracker.component.html
@@ -1,1 +1,2 @@
-<app-tracker-tabs></app-tracker-tabs>
+<app-no-courses *ngIf="courses.length <= 0"></app-no-courses>
+<app-tracker-table></app-tracker-table>
