#31 Workaround to table bug is to reload the page

--- a/src/app/components/courseTracker/tracker/tracker.component.html
+++ b/src/app/components/courseTracker/tracker/tracker.component.html
@@ -1,2 +1,2 @@
 <app-no-courses *ngIf="courses.length <= 0"></app-no-courses>
-<app-tracker-table></app-tracker-table>
+<app-tracker-table *ngIf="courses.length >= 1"></app-tracker-table>
