#28 Added edit button to course work table

--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.css
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.css
@@ -12,7 +12,12 @@ table {
 }
 
 .buttons {
+  width: 30%;
   margin-top: 1%;
   margin-right: 10%;
   float: right;
+}
+
+.buttons app-edit-work-button {
+  margin: 1%;
 }
