--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.html
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.html
@@ -56,6 +56,7 @@
 </table>
 <div class="buttons">
   <app-add-work-button *ngIf="courses.length >= 1"  (click)="addCourseWork()"></app-add-work-button>
+  <app-edit-work-button *ngIf="courses.length >= 1"></app-edit-work-button>
   <app-delete-work-button *ngIf="courses.length >= 1" (click)="deleteCourseWork()"></app-delete-work-button>
 </div>
 <!--  -->
