Worked on tracker table

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -6,7 +6,7 @@
     <div class="loginInfo">
       <mat-form-field appearance="fill">
         <mat-label>Enter your email</mat-label>
-        <input matInput required>
+        <input matInput required email>
         <mat-error></mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill">
