--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.html
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.html
@@ -42,7 +42,7 @@
   <!-- Date Column -->
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let work"> {{work.date}} </td>
+    <td mat-cell *matCellDef="let work"> {{work.date | date : 'shortDate'}} </td>
   </ng-container>
 
   <!-- Time Column -->
