--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.css
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.css
@@ -4,6 +4,15 @@ h1 {
   margin: 5% auto;
 }
 
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+mat-spinner {
+  margin: auto;
+}
+
 table {
   margin-top: 1%;
   margin-left: auto;
@@ -12,7 +21,7 @@ table {
 }
 
 .buttons {
-  width: 25%;
+  width: 30%;
   margin-top: 1%;
   float: right;
 }
