--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.html
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.html
@@ -1,62 +1,65 @@
 <h1>Active Course Work</h1>
-<table mat-table [dataSource]="courseWork" class="mat-elevation-z8">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<div class="container" *ngIf="!isLoading">
+  <table mat-table [dataSource]="courseWork" class="mat-elevation-z8">
 
-  <!-- Select Column -->
-  <ng-container>
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()"
-                      [aria-label]="checkboxLabel()">
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null"
-                      [checked]="selection.isSelected(row)"
-                      [aria-label]="checkboxLabel(row)">
-        </mat-checkbox>
-      </td>
+    <!-- Select Column -->
+    <ng-container>
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()"
+                        [aria-label]="checkboxLabel()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? selection.toggle(row) : null"
+                        [checked]="selection.isSelected(row)"
+                        [aria-label]="checkboxLabel(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
     </ng-container>
-  </ng-container>
 
-  <!-- Course Column  -->
-  <ng-container matColumnDef="course">
-    <th mat-header-cell *matHeaderCellDef>Course</th>
-    <td mat-cell *matCellDef="let work"> {{work.course}} </td>
-  </ng-container>
+    <!-- Course Column  -->
+    <ng-container matColumnDef="course">
+      <th mat-header-cell *matHeaderCellDef>Course</th>
+      <td mat-cell *matCellDef="let work"> {{work.course}} </td>
+    </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let work"> {{work.name}} </td>
-  </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let work"> {{work.name}} </td>
+    </ng-container>
 
-  <!-- Type Column -->
-  <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef>Type</th>
-    <td mat-cell *matCellDef="let work"> {{work.type}} </td>
-  </ng-container>
+    <!-- Type Column -->
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef>Type</th>
+      <td mat-cell *matCellDef="let work"> {{work.type}} </td>
+    </ng-container>
 
-  <!-- Date Column -->
-  <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let work"> {{work.date | date : 'shortDate'}} </td>
-  </ng-container>
+    <!-- Date Column -->
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef>Date</th>
+      <td mat-cell *matCellDef="let work"> {{work.date | date : 'fullDate'}} </td>
+    </ng-container>
 
-  <!-- Time Column -->
-  <ng-container matColumnDef="time">
-    <th mat-header-cell *matHeaderCellDef>Time</th>
-    <td mat-cell *matCellDef="let work"> {{work.time}} </td>
-  </ng-container>
+    <!-- Time Column -->
+    <ng-container matColumnDef="time">
+      <th mat-header-cell *matHeaderCellDef>Time</th>
+      <td mat-cell *matCellDef="let work"> {{work.time}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<div class="buttons">
-  <app-add-work-button *ngIf="courses.length >= 1"  (click)="addCourseWork()"></app-add-work-button>
-  <app-edit-work-button *ngIf="courses.length >= 1" (click)="editCourseWork()"></app-edit-work-button>
-  <app-delete-work-button *ngIf="courses.length >= 1" (click)="deleteCourseWork()"></app-delete-work-button>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <div class="buttons">
+    <app-add-work-button *ngIf="courses.length >= 1"  (click)="addCourseWork()"></app-add-work-button>
+    <app-edit-work-button *ngIf="courses.length >= 1" (click)="editCourseWork()"></app-edit-work-button>
+    <app-delete-work-button *ngIf="courses.length >= 1" (click)="deleteCourseWork()"></app-delete-work-button>
+  </div>
 </div>
-<!--  -->
+
