Fixed datepicker timezone error

--- a/src/app/components/courseTracker/edit-course-work/edit-course-work.component.css
+++ b/src/app/components/courseTracker/edit-course-work/edit-course-work.component.css
@@ -3,6 +3,10 @@ mat-card {
   margin: 10% auto;
 }
 
+mat-spinner {
+  margin: auto;
+}
+
 .course-work {
   display: flex;
   flex-direction: column;
