--- a/src/app/components/courseTracker/edit-course-work/edit-course-work.component.html
+++ b/src/app/components/courseTracker/edit-course-work/edit-course-work.component.html
@@ -1,17 +1,18 @@
 <mat-card>
-  <h1>Edit Course Work</h1>
-  <div>
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <div *ngIf="!isLoading">
+    <h1>Edit Course Work</h1>
   <form class="course-work" (submit)="updateCourseWork(postForm)" #postForm="ngForm">
     <mat-form-field appearance="fill">
       <mat-label>Select Course</mat-label>
       <mat-select required [(ngModel)]="selectedCourse" name="course">
-        <mat-option *ngFor="let course of courses" [value]="course.courseName">
+        <mat-option *ngFor="let course of courses" [value]="course?.courseName">
           {{course.courseName}}</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Name</mat-label>
-      <input matInput type="text" name="name" required [ngModel]="courseWork.name" #name="ngModel">
+      <input matInput type="text" name="name" required [ngModel]="courseWork?.name" #name="ngModel">
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Select</mat-label>
@@ -24,14 +25,14 @@
       <p>
         <mat-form-field appearance="fill">
           <mat-label>Due Date</mat-label>
-          <input matInput name="date" [matDatepicker]="dp3" required [ngModel]="courseWork.date" #date="ngModel">
+          <input matInput name="date" [matDatepicker]="dp3" required [ngModel]="courseWork?.date" #date="ngModel">
           <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
           <mat-datepicker #dp3 disabled="false"></mat-datepicker>
         </mat-form-field>
       </p>
     <mat-form-field appearance="fill">
       <mat-label>Time</mat-label>
-      <input matInput type="time" name="time" min="0:00" max="23:59" required [ngModel]="courseWork.time" #time="ngModel">
+      <input matInput type="time" name="time" min="0:00" max="23:59" required [ngModel]="courseWork?.time" #time="ngModel">
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Update</button>
   </form>
