--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,17 +6,17 @@
       <mat-icon>menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item routerLink="/accountInfo">
+      <!-- <button mat-menu-item routerLink="/accountInfo">
         <mat-icon>account_circle</mat-icon>
         <span>Account Info</span>
+      </button> -->
+      <button mat-menu-item routerLink="/course">
+        <mat-icon>class</mat-icon>
+        <span>Courses</span>
       </button>
       <button mat-menu-item routerLink="/">
         <mat-icon>school</mat-icon>
         <span>Course Work</span>
-      </button>
-      <button mat-menu-item routerLink="/course">
-        <mat-icon>add</mat-icon>
-        <span>Add Courses</span>
       </button>
       <button mat-menu-item (click)="logout()">
         <mat-icon>exit_to_app</mat-icon>
