--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -3,22 +3,20 @@
      <h2>Login</h2>
   </mat-card-title>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="login(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
-    <div class="loginInfo">
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your email</mat-label>
-        <input matInput name="email" ngModel #emailInput="ngModel" required email>
-        <mat-error *ngIf="emailInput.invalid"></mat-error>
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your password</mat-label>
-        <input matInput name="password" ngModel #passwordInput="ngModel" [type]="hide ? 'password' : 'text'" required>
-        <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-      </mat-form-field>
-      <mat-error *ngIf="passwordInput.invalid"></mat-error>
-    </div>
+  <form class="login-info" (submit)="login(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+      <input matInput name="email" ngModel #emailInput="ngModel" required email>
+      <mat-error *ngIf="emailInput.invalid"></mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your password</mat-label>
+      <input matInput name="password" ngModel #passwordInput="ngModel" [type]="hide ? 'password' : 'text'" required>
+      <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+    </mat-form-field>
+    <mat-error *ngIf="passwordInput.invalid"></mat-error>
     <div class="button">
       <button mat-raised-button color="primary" type="submit">Login</button>
     </div>
