--- a/src/app/components/courseTracker/dialog-form/dialog-form.component.html
+++ b/src/app/components/courseTracker/dialog-form/dialog-form.component.html
@@ -15,9 +15,9 @@
   <mat-form-field appearance="fill">
     <mat-label>Select</mat-label>
       <mat-select required [(ngModel)]="selectedType" name="type">
-        <mat-option value="assignment">Assignment</mat-option>
-        <mat-option value="quiz">Quiz</mat-option>
-        <mat-option value="test">Test</mat-option>
+        <mat-option value="Assignment">Assignment</mat-option>
+        <mat-option value="Quiz">Quiz</mat-option>
+        <mat-option value="Test">Test</mat-option>
       </mat-select>
     </mat-form-field>
     <p>
